--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
 </head>
 
-<body >
+<body class="mat-typography" >
   <app-root></app-root>
 </body>
 
